<resources>
    <string name="app_name">CompeoVario</string>
    <string name="title_activity_maps">Map</string>
<string name="menu_settings">Settings</string>
    <string name="menu_map">Open Map</string>
    <string name="map_task_title">Task</string>
    <string name="map_task_add">Add Task</string>
    <string name="map_task_edit">Configure Task</string>
    <string name="map_task_create">Create Task</string>
    <string name="map_task_delete">Delete Task</string>
    <string name="map_status_text">Connecting to gps...</string>
    <string name="map_wp_add">Task</string>
    <string name="btn_delltask">Delete Task</string>
    <string name="btn_savetask">Save Task</string>
    <string name="btn_addTp">Add Turn Point</string>
    <string name="btn_opentask">Open Task</string>
    <string name="btn_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="file_invalid">The selected file is invalid.</string>
    <string name="file_select">Please select a file.</string>
    <string name="file_size_byte">byte</string>
    <string name="file_size_bytes">bytes</string>
    <string name="file_size_kb">kB</string>
    <string name="file_size_mb">MB</string>
    <string name="file_size_gb">GB</string>
    <string name="selected">Selected</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="exit">Exit</string>
    <string name="titleturnpoint">Turn Points</string>
    <string name="titletasksettings">Task Settings</string>
    <string name="titletask">Current Task</string>
    <string name="tname">TurnPoint Name :</string>
    <string name="tlat">Latitude: (decimal) </string>
    <string name="tlon">Longitude: (decimal)</string>
    <string name="talt">Altitude : (m)</string>
    <string name="tpname">Name :</string>
    <string name="tpradius">Radius / Lenght :</string>
    <string name="tpindex">Index :</string>
    <string name="tptype">Type :</string>
    <string name="tpshape">Shape :</string>
    <string name="txt_starttime">Start Time :</string>
      <string name="txt_endtime">End Time   :</string>
    <string name="txt_time">00:00:00</string>
    <string name="txt_stime">13:30</string>
    <string name="txt_etime">18:00</string>
    <string-array name="taskpointtype_arrays">
        <item>Start</item>
        <item>Turn</item>
        <item>Finish</item>
    </string-array>
    <string-array name="taskpointshape_arrays">
        <item>Cylinder</item>
        <item>Line</item>
    </string-array>
    <string name="exit_title">EXIT</string>
    <string name="preferences_dumpLevel">Filter Dump level</string>
    <string name="btn_coord">Enter Coord</string>
    <string name="demo_title">Google Maps API Demos</string>
    <string name="legal_info">Legal Info</string>
    <string name="no_demos">No demos</string>
    <string name="play_services_not_installed">Google Play services is not installed on this device.</string>
    <string name="alpha">Alpha</string>
    <string name="animate">Animate</string>
    <string name="basic_map_demo_label">Basic Map</string>
    <string name="basic_map_demo_description">Launches a map.</string>
    <string name="buildings">Buildings</string>
    <string name="camera_demo_label">Camera</string>
    <string name="camera_demo_description">Demonstrates camera functions.</string>
    <string name="circle_demo_label">Circles</string>
    <string name="circle_demo_description">Demonstrates how to add Circles to a map.</string>
    <string name="camera_clamping_demo_label">Camera Clamping</string>
    <string name="camera_clamping_demo_description">Demonstrates how to constrain the camera to specific boundaries and zoom levels.</string>
    <string name="clamp_latlng_adelaide">Clamp to Adelaide</string>
    <string name="clamp_latlng_pacific">Clamp to Pacific</string>
    <string name="clamp_latlng_reset">Reset LatLng Bounds</string>
    <string name="clamp_min_zoom">MinZoom++</string>
    <string name="clamp_max_zoom">MaxZoom--</string>
    <string name="clamp_zoom_reset">Reset Zoom Bounds</string>
    <string name="clear_map">Clear</string>
    <string name="clickable">Clickable</string>
    <string name="compass">Compass</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="duration">Custom Duration</string>
    <string name="hue">Hue</string>
    <string name="events_demo_label">Events</string>
    <string name="events_demo_description">Demonstrates event handling.</string>
    <string name="fade_in">Fade In Tiles</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="flat">Flat</string>
    <string name="go_to_bondi">Go to Bondi</string>
    <string name="go_to_santorini">Go to Santorini</string>
    <string name="go_to_sydney">Go to Sydney</string>
    <string name="ground_overlay_demo_label">Ground Overlays</string>
    <string name="ground_overlay_demo_description">Demonstrates how to add a GroundOverlay to a map.</string>
    <string name="hybrid">Hybrid</string>
    <string name="indoor">Indoor</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>


        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="left_arrow">\u2190</string>
    <string name="location_source_demo_label">Location Source Demo</string>
    <string name="location_source_demo_description">Demonstrates how to use a custom location source.</string>
    <string name="map_circle_description">Google Map with circles.</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_in_pager_demo_label">Map In Pager</string>
    <string name="map_in_pager_demo_description">Demonstrates how to add a map to a ViewPager.</string>
    <string name="marker_demo_label">Markers</string>
    <string name="marker_close_info_window_on_retap_demo_label">Marker Close Info Window on Retap</string>
    <string name="marker_close_info_window_on_retap_demo_description">Demonstrates how to close the info window when the currently selected marker is retapped.</string>
    <string name="marker_demo_description">Demonstrates how to add Markers to a map.</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="multi_map_demo_label">Multiple Maps</string>
    <string name="multi_map_demo_description">Demonstrates how to show multiple maps in a single activity.</string>
    <string name="my_location">My Location</string>
    <string name="my_location_demo_label">My Location Demo</string>
    <string name="my_location_demo_description">Demonstrates how to use GMS Location.</string>
    <string name="mylocation_button">My Location Button</string>
    <string name="mylocation_layer">My Location Layer</string>
    <string name="none_map">None</string>
    <string name="normal">Normal</string>
    <string name="options_demo_label">Options</string>
    <string name="options_demo_description">Demonstrates how to use Options to initialize a map.</string>
    <string name="polygon_demo_label">Polygons</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="polyline_demo_label">Polylines</string>
    <string name="polyline_demo_description">Demonstrates how to add Polylines to a map.</string>
    <string name="programmatic_demo_label">Programmatically add map</string>
    <string name="programmatic_demo_description">Demonstrates how to add a MapFragment programmatically.</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="properties_sydney_polyline">Properties for Sydney Polyline</string>
    <string name="properties_sydney_polygon">Properties for Sydney Polygon</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="raw_map_view_demo_label">Raw MapView</string>
    <string name="raw_map_view_demo_description">Demonstrates how to use a raw MapView.</string>
    <string name="reset_map">Reset</string>
    <string name="retain_map_demo_label">Retain map</string>
    <string name="retain_map_demo_description">Demonstrates how to reuse a MapFragment.</string>
    <string name="right_arrow">\u2192</string>
    <string name="rotation">Rotation:</string>
    <string name="satellite">Satellite</string>
    <string name="save_state_demo_label">Save the state of a MapFragment.</string>
    <string name="save_state_demo_description">Demonstrates how to save the state of a MapFragment upon rotation of the device.</string>
    <string name="save_state_instructions">Drag the marker, tap on it to change its color and rotate the device to check that the state of the map is preserved.</string>
    <string name="scroll">Scroll Gestures</string>
    <string name="snapshot_clear_button">Clear</string>
    <string name="snapshot_demo_label">Snapshot</string>
    <string name="snapshot_demo_description">Demonstrates how to take a snapshot of the map.</string>
    <string name="snapshot_holder_description">Area for the map snapshot.</string>
    <string name="snapshot_take_button">Take snapshot</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="swipe">\u2190 Swipe \u2192</string>
    <string name="switch_image">Switch Image</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="terrain">Terrain</string>
    <string name="tile_coordinate_demo_label">Tile Coordinate Overlay</string>
    <string name="tile_coordinate_demo_description">Demonstrates how to add a tile overlay with tile coordinates to a map.</string>
    <string name="tile_overlay_demo_label">Tile Overlays</string>
    <string name="tile_overlay_demo_description">Demonstrates how to add a tile overlay to a map.</string>
    <string name="tilt">Tilt Gestures</string>
    <string name="tilt_less">\u2193</string>
    <string name="tilt_more">\u2191</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="ui_settings_demo_label">UI Settings</string>
    <string name="ui_settings_demo_description">Demonstrates how to alter user interface settings.</string>
    <string name="up_arrow">\u2191</string>
    <string name="visible_region_demo_label">Visible Regions</string>
    <string name="visible_region_demo_description">Demonstrates how to use Visible Regions.</string>
    <string name="vr_aus_button">AUS</string>
    <string name="vr_normal_button">Normal</string>
    <string name="vr_more_padded_button">More</string>
    <string name="vr_soh_button">SOH</string>
    <string name="vr_sfo_button">SFO</string>
    <string name="wait_for_map_load">Wait for Map Load</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">Zoom Buttons</string>
    <string name="zoom_gestures">Zoom Gestures</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="menu_button_enable_gps">Enable GPS</string>
    <string name="menu_button_files">Manage Files</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_button_task">Task</string>
    <string name="settings_menu_map_options">Map</string>
    <string name="settings_menu_thermic_options">Thermic Cacher</string>
    <string name="settings_menu_map_tile_provider">Map tile provider</string>
</resources>