<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity">

    <item
        android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/menu_button_settings"></item>
    <item
        android:id="@+id/gps_settings"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/menu_button_enable_gps"></item>
    <item
        android:id="@+id/task"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/menu_button_task"></item>
    <item
        android:id="@+id/files"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/menu_button_files"></item>

</menu>